[package]
name = "tc-forward-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tc-forward-common = { path = "../tc-forward-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tc-forward"
path = "src/main.rs"
